[gd_scene load_steps=7 format=2]

[ext_resource path="res://engine/scenes/objects/upgrade_pickup/upgrade_sprites.tres" type="SpriteFrames" id=1]
[ext_resource path="res://engine/scenes/objects/upgrade_pickup/MajorCollectionPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://engine/scenes/Samus/visors/scan/ScanNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://engine/scenes/objects/upgrade_pickup/UpgradePickup.gd" type="Script" id=145]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="UpgradePickup" type="Area2D" groups=[
"UpgradePickup",
]]
collision_layer = 262144
collision_mask = 32769
script = ExtResource( 145 )

[node name="CollectionPopup" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
pause_mode = 1
position = Vector2( 8, 8 )
frames = ExtResource( 1 )
animation = "missile"
playing = true

[node name="ScanNode" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, 8 )
material_nodes = [ NodePath("../AnimatedSprite") ]

[node name="CollisionShape2D" parent="ScanNode" index="0"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_UpgradePickup_body_entered"]

[editable path="ScanNode"]
